# ZabbixOneWebHostCreator

./: LICENSE  README.md  ZabbixOneWebHostCreator.py  pyproject.toml  requirements.txt  setup.py
src/zabbixHostCreatorforOneWeb/: zabbixHostCreatorforOneWeb.service
